--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,25 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
-	# Check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.21
-	loader_version=0.9.0+build.204
+# Check these on https://modmuss50.me/fabric.html
+minecraft_version = 1.16.1
+yarn_mappings = 1.16.1+build.21
+loader_version = 0.9.0+build.204
 
-#Fabric api
-	fabric_version=0.15.1+build.380-1.16.1
+# Fabric api
+fabric_version = 0.15.1+build.380-1.16.1
+loom_version = 0.4-SNAPSHOT
 
-	loom_version=0.4-SNAPSHOT
-
-	# Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.github.hellsingdarge.compactstatuseffects
-	archives_base_name = CompactStatusEffects
+# Mod Properties
+mod_version = 1.0.0
+maven_group = com.github.hellsingdarge.compactstatuseffects
+archives_base_name = CompactStatusEffects
 
 # Kotlin
-	kotlin_version=1.3.72
-    fabric_kotlin_version=1.3.72+build.1
+kotlin_version = 1.3.72
+fabric_kotlin_version = 1.3.72+build.1
+
+# Config screen
+modmenu_version = 1.14.5+build.30
+cloth_version = 4.6.0
+autoconfig_version = 3.2.0-unstable
