--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ processResources {
     }
 }
 
+// todo something not as hacky to get the path
 task deleteOldLangFile(type: Delete) {
     delete("${sourceSets.main.resources.srcDirs[0]}/assets/compactstatuseffects/lang/en_us.json")
 }
@@ -63,16 +64,10 @@ task copyLangFile(type: Copy, dependsOn: deleteOldLangFile) {
 
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier = "sources"
     from sourceSets.main.allSource
