--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "fabric-loom"
-    id "org.jetbrains.kotlin.jvm"
+    id("fabric-loom")
+    id("org.jetbrains.kotlin.jvm")
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -11,13 +11,13 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-    maven { url = "http://maven.fabricmc.net/" }
+    maven { url = "https://maven.fabricmc.net/" }
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    minecraft("com.mojang:minecraft:${project.minecraft_version}")
 
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    mappings("net.fabricmc:yarn:${project.yarn_mappings}:v2")
 
     modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
     modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
