--- a/gradle.properties
+++ b/gradle.properties
@@ -2,24 +2,24 @@ org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
 # Check these on https://modmuss50.me/fabric.html
-minecraft_version = 1.16.1
-yarn_mappings = 1.16.1+build.21
-loader_version = 0.9.2+build.206
+minecraftVersion = 1.16.1
+yarnMappings = 1.16.1+build.21
+loaderVersion = 0.9.2+build.206
 
 # Fabric api
-fabric_version = 0.17.0+build.386-1.16.1
-loom_version = 0.4-SNAPSHOT
+fabricVersion = 0.17.0+build.386-1.16.1
+loomVersion = 0.4-SNAPSHOT
 
 # Mod Properties
-mod_version = 1.2.2
-maven_group = com.github.hellsingdarge.compactstatuseffects
-archives_base_name = CompactStatusEffects
+modVersion = 1.2.2
+mavenGroup = com.github.hellsingdarge.compactstatuseffects
+jarBaseName = CompactStatusEffects
 
 # Kotlin
-kotlin_version = 1.3.72
-fabric_kotlin_version = 1.3.72+build.1
+kotlinVersion = 1.3.72
+fabricKotlinVersion = 1.3.72+build.1
 
 # Config screen
-modmenu_version = 1.14.5+build.30
-cloth_version = 4.6.0
-autoconfig_version = 3.2.0-unstable
+modmenuVersion = 1.14.5+build.30
+clothVersion = 4.6.0
+autoconfigVersion = 3.2.0-unstable
