--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@ org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
 # Check these on https://modmuss50.me/fabric.html
-minecraftVersion = 1.16.1
-yarnMappings = 1.16.1+build.21
-loaderVersion = 0.9.2+build.206
+minecraftVersion = 1.16.4
+yarnMappings = 1.16.4+build.9
+loaderVersion = 0.11.2
 
 # Fabric api
-fabricVersion = 0.17.0+build.386-1.16.1
-loomVersion = 0.4-SNAPSHOT
+fabricVersion = 0.31.0+1.16
+loomVersion = 0.6-SNAPSHOT
 
 # Mod Properties
 modVersion = 1.2.3
@@ -16,10 +16,10 @@ mavenGroup = com.github.hellsingdarge.compactstatuseffects
 jarBaseName = CompactStatusEffects
 
 # Kotlin
-kotlinVersion = 1.3.72
-fabricKotlinVersion = 1.3.72+build.1
+kotlinVersion = 1.4.30
+fabricKotlinVersion = 1.4.30+build.2
 
 # Config screen
-modmenuVersion = 1.14.5+build.30
-clothVersion = 4.6.0
-autoconfigVersion = 3.2.0-unstable
+modmenuVersion = 1.16.7
+clothVersion = 4.8.3
+autoconfigVersion = 3.3.1
