com.github -> me for packages

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loomVersion = 0.6-SNAPSHOT
 
 # Mod Properties
 modVersion = 1.2.3
-mavenGroup = com.github.hellsingdarge.compactstatuseffects
+mavenGroup = me.hellsingdarge.compactstatuseffects
 jarBaseName = CompactStatusEffects
 
 # Kotlin
