--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ fabricVersion = 0.31.0+1.16
 loomVersion = 0.6-SNAPSHOT
 
 # Mod Properties
-modVersion = 1.2.3
+modVersion = 1.3.0
 mavenGroup = me.hellsingdarge.compactstatuseffects
 jarBaseName = CompactStatusEffects
 
@@ -20,5 +20,5 @@ kotlinVersion = 1.4.30
 fabricKotlinVersion = 1.4.30+build.2
 
 # Config screen
-modmenuVersion = 1.16.7
+modMenuVersion = 1.16.7
 clothVersion = 4.11.14
