Update galore: mc 1.16.4 -> 1.16.5 yarn 1.16.4 -> 1.16.5 loader 0.11.2 -> 0.11.6 loom 0.6 -> 0.7 kotlin 1.4.30 -> 1.5.10 fabric kotlin 1.4.30 -> 1.5.10 modmenu 1.16.7 -> 1.16.9 cloth 4.11.14 -> 4.11.26

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties
-# Check these on https://modmuss50.me/fabric.html
-minecraftVersion = 1.16.4
-yarnMappings = 1.16.4+build.9
-loaderVersion = 0.11.2
+# Check these on https://fabricmc.net/versions.html
+minecraftVersion = 1.16.5
+yarnMappings = 1.16.5+build.10
+loaderVersion = 0.11.6
 
 # Fabric api
-loomVersion = 0.6-SNAPSHOT
+loomVersion = 0.7-SNAPSHOT
 
 # Mod Properties
 modVersion = 1.3.0
@@ -15,9 +15,9 @@ mavenGroup = me.hellsingdarge.compactstatuseffects
 jarBaseName = CompactStatusEffects
 
 # Kotlin
-kotlinVersion = 1.4.30
-fabricKotlinVersion = 1.4.30+build.2
+kotlinVersion = 1.5.10
+fabricKotlinVersion = 1.6.1+kotlin.1.5.10
 
 # Config screen
-modMenuVersion = 1.16.7
-clothVersion = 4.11.14
+modMenuVersion = 1.16.9
+clothVersion = 4.11.26
